npic/uri-ing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uri-ingress
  namespace: nginx-ingress
spec:
  rules:
    - host: devbinx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-svc-account
                port:
                  number:
                    80
  ingressClassName: nginx
